# MBB980-Final-Paper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: adaptation.yaml  audit.yaml  fixed_context.yaml  perturb.yaml  radicals.yaml
data/processed/: perturb_prompts.csv  radical_chars.csv
notebooks/: final_analysis.ipynb
reports/: final_report.md  methods.md
reports/paper_assets/: README.md  appendix_table_fixed_context_full.csv  appendix_table_fixed_context_full.md  appendix_table_fixed_context_full.tex  appendix_table_full_audit_with_controls.csv  appendix_table_full_audit_with_controls.md  appendix_table_full_audit_with_controls.tex  appendix_table_perturbation_summary.csv  appendix_table_perturbation_summary.md  appendix_table_perturbation_summary.tex  appendix_table_radical_logit_coefficients.csv  appendix_table_radical_logit_coefficients.md  appendix_table_radical_logit_coefficients.tex  captions.md  table1_tokenization_audit_summary.csv  table1_tokenization_audit_summary.md  table1_tokenization_audit_summary.tex  table2_radical_token_sensitivity_summary.csv  table2_radical_token_sensitivity_summary.md  table2_radical_token_sensitivity_summary.tex
results/fixed_context/: auc_by_language.csv  raw_log.jsonl  summary.csv  summary.md
results/paraphrase_token_perturb/: perturbations.csv  raw.jsonl  summary.csv  summary.md
results/radical_sensitivity/: condition_table.csv  odd_one_out.csv  (+5 more)
src/: __init__.py  build_paper_assets.py  reconstruct_analysis.py  run_fixed_context.py  run_paraphrase_perturb.py  run_radical_sensitivity.py  run_tokenization_audit.py  run_tokenizer_adaptation.py
tests/: test_smoke.py
(+40 files in other folders)
