[project]
name = "xling-tok"
version = "0.1.0"
description = "Cross-linguistic LLM performance and tokenization (EN vs ZH) research pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Research" }]

# Core dependencies are intentionally minimal so the tokenization audit
# (Experiment 1) runs even without HF / torch / API installs. Heavier
# extras pull in modeling backends.
dependencies = [
  "numpy>=1.26,<2.3",
  "pandas>=2.1,<2.3",
  "scipy>=1.11,<1.15",
  "matplotlib>=3.8,<3.10",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "regex>=2024.4.16",
  "tiktoken>=0.7.0",
  "sentencepiece>=0.2.0",
  "datasets>=2.19,<3.2",
  "huggingface-hub>=0.24",
  "tokenizers>=0.19,<0.21",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "rich>=13.7",
  "click>=8.1",
  "opencc-python-reimplemented>=0.1.7",
  "rouge-score>=0.1.2",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
hf = [
  "transformers>=4.44,<4.50",
  "accelerate>=0.33",
  "torch>=2.2",
  "safetensors>=0.4",
]
api = [
  "openai>=1.40",
  "httpx>=0.27",
  "tenacity>=8.5",
]
notebook = [
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
